--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,36 @@
+Thu Jul  9 12:45:01 PDT 1998 <blair@gps.caltech.edu> (Blair Zajac)
+
+	Reloase version 0.03.
+
+Wed Jul  8 10:05:41 PDT 1998 <blair@gps.caltech.edu> (Blair Zajac)
+
+	Update Makefile.PL to rquire HTML::Parser 2.20.
+
+Tue Jul  7 10:25:39 PDT 1998 <blair@gps.caltech.edu> (Blair Zajac)
+
+	Update Makefile.PL to require LWPng_alpha 0.23, LWP 5.34, and
+	HTML::Parser 2.19.
+
+	Rename all gen_response to give_response after LWPng changed
+	the name of LWP::Request->gen_response to LWP::Request->give_response.
+
+Sat Jul  4 09:59:33 PDT 1998 <blair@gps.caltech.edu> (Blair Zajac)
+
+	Replace occurances of EGADS with WebFS::FileCopy in Makefile.PL.
+	Noted by Lupe Christoph <lupe@alanya.m.isar.de>.
+
+	Rename the WebFS::UA package to WebFS::FileCopy::UA and
+	WebFS::Response to WebFS::FileCopy::Response to keep the
+	namespace cleaner.
+
+Thu Jul  2 10:45:31 PDT 1998 <blair@gps.caltech.edu> (Blair Zajac)
+
+	Per Gisle's request, put _start_read_request and
+	_start_transfer_request in a new WebFS::UA package and
+	_read_content in a new WebFS::Response package.
+
+	Update t/01copy.t to pass all tests on Windows NT.
+
 Sun Jun 28 11:22:57 PDT 1998 <blair@gps.caltech.edu> (Blair Zajac)
 
 	Have WebFS::FileCopy use version 0.21 of LWPng or greater.
