--- a/CHANGES
+++ b/CHANGES
@@ -1,27 +1,48 @@
+Tue Apr 13 09:29:13 PDT 1999 <bzajac@geostaff.com> (Blair Zajac)
+
+	Update the module to use URI instead of URI::URL.  Check for
+	URI 1.02 in Makefile.PL.
+
+	Update to use LWPng-alpha 0.24 which now uses URI instead of
+	URI::URL.
+
+	Increase the number of tests in t/01copy.t to check the return
+	from any WebFS::FileCopy command for a defined values.
+
+	Check for Digest::MD5 version 2.06 instead of MD5 version 1.7
+	in Makefile.PL.
+
+	Release version 1.00.
+
+Thu Apr  8 10:20:30 PDT 1999 <bzajac@geostaff.com> (Blair Zajac)
+
+	Have ok() in t/*.t return the success or failure of the test
+	instead of the number of tests performed.
+
 Thu Jul  9 12:45:01 PDT 1998 <blair@gps.caltech.edu> (Blair Zajac)
 
-	Reloase version 0.03.
+	Release version 0.03.
 
 Wed Jul  8 10:05:41 PDT 1998 <blair@gps.caltech.edu> (Blair Zajac)
 
-	Update Makefile.PL to rquire HTML::Parser 2.20.
+	Update Makefile.PL to require HTML::Parser 2.20.
 
 Tue Jul  7 10:25:39 PDT 1998 <blair@gps.caltech.edu> (Blair Zajac)
 
 	Update Makefile.PL to require LWPng_alpha 0.23, LWP 5.34, and
 	HTML::Parser 2.19.
 
-	Rename all gen_response to give_response after LWPng changed
-	the name of LWP::Request->gen_response to LWP::Request->give_response.
+	Rename all gen_response to give_response after LWPng changed the
+	name of LWP::Request->gen_response to LWP::Request->give_response.
 
 Sat Jul  4 09:59:33 PDT 1998 <blair@gps.caltech.edu> (Blair Zajac)
 
-	Replace occurances of EGADS with WebFS::FileCopy in Makefile.PL.
+	Replace occurrences of EGADS with WebFS::FileCopy in Makefile.PL.
 	Noted by Lupe Christoph <lupe@alanya.m.isar.de>.
 
 	Rename the WebFS::UA package to WebFS::FileCopy::UA and
-	WebFS::Response to WebFS::FileCopy::Response to keep the
-	namespace cleaner.
+	WebFS::Response to WebFS::FileCopy::Response to keep the name
+	space cleaner.
 
 Thu Jul  2 10:45:31 PDT 1998 <blair@gps.caltech.edu> (Blair Zajac)
 
@@ -65,4 +86,5 @@ Fri May 15 15:18:22 PDT 1998 <blair@gps.caltech.edu> (Blair Zajac)
 Wed May 13 18:19:38 PDT 1998 <blair@gps.caltech.edu> (Blair Zajac)
 
 	Version 0.01
+
 	First version.
