--- a/README
+++ b/README
@@ -1,11 +1,10 @@
-Package WebFS::FileCopy version 0.03
+Package WebFS::FileCopy version 1.00
 
 This is the WebFS::FileCopy package.  This module provides subroutines
-for the getting, putting, copying, moving and deleting of files located
-by URLs.  It also supports listing directories identified by URL.
-Currently, files for getting can use any URL protocol, such as file,
-FTP, HTTP, etc.  For putting, only the file and ftp protocols are
-currently supported.
+for the getting, putting, copying, moving and deleting of files located by
+URLs.  It also supports listing directories identified by URL.  Currently,
+files for getting can use any URL protocol, such as file, FTP, HTTP, etc.
+For putting, only the file and FTP protocols are currently supported.
 
 Notable features:
 
@@ -15,7 +14,8 @@ Notable features:
 
    * Put content into multiple URLs simultaneously.
 
-   * Copy multiple files located by URLs to multiple locations simultaneously.
+   * Copy multiple files located by URLs to multiple locations
+     simultaneously.
 
    * Delete a file located by a URL.
 
@@ -34,34 +34,36 @@ REQUIREMENTS
 
    * Perl 5.004_04 or greater.
 
-   * LWPng-alpha-0.23 or greater.
+   * LWPng-alpha 0.24 or greater.
 
-   * Net::FTP.
+   * URI 1.02 or greater.
+
+   * Net::FTP 2.33 or greater.
 
 SUPPORTED PLATFORMS
 
-I have built and tested the WebFS::FileCopy package on both Solaris
-and Windows NT machines.
+I have built and tested the WebFS::FileCopy package on both Solaris and
+Windows NT machines.
 
 AVAILABILITY
 
 The latest version of this package is available for download from a CPAN
 (Comprehensive Perl Archive Network) site near your at
 
-	http://www.perl.com/CPAN/authors/id/B/BZ/BZAJAC/
+    http://www.perl.com/CPAN/authors/id/B/BZ/BZAJAC/
 
 or from my FTP site:
 
-	ftp://ftp.gps.caltech.edu/pub/blair/Perl/
+    ftp://ftp.gps.caltech.edu/pub/blair/Perl/
 
 INSTALLATION
 
 In order to use this package you will need Perl version 5.004_04 or
 better.
 
-You will need a LWPng-alpha version 0.23 or greater.  Versions older
-than this one will not work with WebFS::FileCopy.  Get LWPng-alpha
-from CPAN as CPAN/authors/id/GAAS/LWPng-alpha-?.??.tar.gz.
+You will need a LWPng-alpha version 0.24 or greater.  Versions older
+than this one will not work with WebFS::FileCopy.  Get LWPng-alpha from
+CPAN as CPAN/authors/id/GAAS/LWPng-alpha-?.??.tar.gz.
 
 If you do not have Net::FTP installed, use CPAN to install Net::FTP.
 
@@ -69,23 +71,23 @@ If you want to install a private copy of this package in some other
 directory, then you should try to produce the initial Makefile with
 something like this command:
 
-	perl Makefile.PL LIB=~/perl
+    perl Makefile.PL LIB=~/perl
 
 DOCUMENTATION
 
 See the CHANGES file for a list of recent changes.  POD style
-documentation is included in all modules and scripts.  These are
-normally converted to manual pages end installed as part of the "make
-install" process.  You should also be able to use the 'perldoc'
-utility to extract documentation from the module files directly.
+documentation is included in all modules and scripts.  These are normally
+converted to manual pages end installed as part of the "make install"
+process.  You should also be able to use the 'perldoc' utility to extract
+documentation from the module files directly.
 
 AUTHOR, COMMENTS AND BUGS
 
-I welcome all comments and bug reports.  Please email them to
-Blair Zajac <blair@gps.caltech.edu>.
+I welcome all comments and bug reports.  Please email them to Blair
+Zajac <blair@gps.caltech.edu>.
 
 COPYRIGHT
 
-Copyright (c) 1998 Blair Zajac. All rights reserved.  This package is
-free software; you can redistribute it and/or modify it under the same
-terms as Perl itself.
+Copyright (c) 1998, 1999 Blair Zajac. All rights reserved.  This package
+is free software; you can redistribute it and/or modify it under the
+same terms as Perl itself.
