Import of BZAJAC/WebFS-FileCopy-1.04 from CPAN.
gitpan-cpan-distribution: WebFS-FileCopy
gitpan-cpan-version:      1.04
gitpan-cpan-path:         BZAJAC/WebFS-FileCopy-1.04.tar.gz
gitpan-cpan-author:       BZAJAC
gitpan-cpan-maturity:     released

--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,12 @@
+Mon Jul 30 14:31:45 PDT 2001
+
+	Release version 1.04.
+
+Mon Jul 30 14:24:56 PDT 2001
+
+	Update the test script to match the new error codes from
+	www.perl.com and ftp.gps.caltech.edu.
+
 Fri Feb  2 16:28:18 PST 2001
 
         Release version 1.03.
